# tiledarray

./: .clang-format  .codecov.yml  .gitignore  .gitlab-ci-jlse.yml  .gitlab-ci.yml  .gitmodules  .hgignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGES  CMakeLists.txt  INSTALL  INSTALL.md  MakeGlobal.am  Makefile  Makefile.am  Makefile.in  NOTES  NativeLog.txt  README.md  README.txt  TiledArrayTest.cpp  _config.yml  aclocal.m4  configure  configure.ac  configure_cmake  index.md  madness_fixture.h  tiledarray-config.cmake.in  tiledarray-targets.cmake.in  tiledarray.pc.in
Tests/: Makefile.am  Makefile.in  TiledArrayTest.cpp  algorithm.cpp  algorithmtest.cpp  annotated_array.cpp  annotated_tile.cpp  annotatedtiletest.cpp  annotation.cpp  annotationtest.cpp  array.cpp  array_dim.cpp  array_fixture.h  array_fixtures.h  array_math.cpp  array_ref.cpp  array_slice.cpp  arraydimtest.cpp  arraymathtest.cpp  arrayslicetest.cpp  arraystoragetest.cpp  arraytest.cpp  arraytest.h  binary_tensor.cpp  binary_tiled_tensor.cpp  bitset.cpp  blocktest.cpp  contraction_tensor.cpp  contraction_tiled_tensor.cpp  coordinate_system.cpp  coordinates.cpp  coordinatestest.cpp  coordinatestest.h  coordsystemtest.cpp  dense_array.cpp  dense_shape.cpp  dense_storage.cpp  densearraytest.cpp  distributed_array.cpp  distributed_storage.cpp  (+66 more)
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README.md  doxygen.cfg  footer.html  mainpage.dox
doc/devsamp/: CMakeLists.txt
doc/dox/: CMakeLists.txt  Doxyfile.in  README.md  jquery.smartmenus.js  layout.xml
examples/: CMakeLists.txt  Makefile.am  Makefile.in  ccsd_spinsplit_batch.out
examples/cc/: CCD_output.txt  CMakeLists.txt  Makefile.am  README  ccd.cpp  ccsd.cpp  input  input_data.cpp  input_data.h  t1.txt  t2.txt
examples/ccd/: Makefile  Makefile.am  Makefile.in  ccd.cpp  input  input_data.cpp  input_data.h
examples/cuda/: CMakeLists.txt  cuda_librett.cpp  cuda_task.cpp  ta_cc_abcd_cuda.cpp  ta_dense_cuda.cpp  ta_reduce_cuda.cpp  ta_vector_cuda.cpp
examples/cuda_tests/: CMakeLists.txt  cuda_cutt.cpp  cuda_task.cpp
examples/demo/: CMakeLists.txt  demo.cpp  demo2.cpp
examples/device/: CMakeLists.txt  cuda_librett.cpp  cuda_task.cpp  device_task.cpp  ta_cc_abcd_device.cpp  ta_dense_device.cpp  ta_dense_um_tensor.cpp  ta_reduce_device.cpp  ta_vector_cuda.cpp  ta_vector_device.cpp  ta_vector_um_tensor.cpp
examples/dgemm/: CMakeLists.txt  Makefile.am  README  blas.cpp  block_size_data_process.py  cpu_cuda_vector.cu  cpu_cuda_vector.h  cuda_um_allocator.h  cuda_um_vector.cu  cuda_um_vector.h  dgemm.cpp  eigen.cpp  fock_build.cpp  platform.h  ta_asymm_dense.cpp  ta_band.cpp  ta_blas.cpp  ta_bounds.cpp  ta_cc_abcd.cpp  ta_cc_abcd_cuda.cpp  ta_dense.cpp  ta_dense_asymm.cpp  ta_dense_cuda.cpp  ta_dense_elem.cpp  ta_dense_new_tile.cpp  ta_dense_nonuniform.cpp  ta_eigen.cpp  ta_elem_dense.cpp  ta_fock_build.cpp  ta_sparse.cpp  ta_sparse_grow.cpp  thrust.h
examples/elemental/: CMakeLists.txt  evd.cpp
examples/fock/: CMakeLists.txt  ta_fock_build.cpp  ta_k_build.cpp
examples/gemm/: CMakeLists.txt  README  block_size_data_process.py  block_size_scan.sh  ta_band.cpp  ta_blas.cpp  ta_cc_abcd.cpp  ta_dense.cpp  ta_dense_asymm.cpp  ta_dense_nonuniform.cpp  ta_eigen.cpp
examples/gpu/: CMakeLists.txt  gpu_librett.cpp  gpu_task.cpp  ta_cc_abcd_gpu.cpp  ta_dense_gpu.cpp  ta_reduce_gpu.cpp  ta_vector_gpu.cpp
examples/mmsim/: Makefile.am  mm_sim.cpp
examples/mpi_tests/: CMakeLists.txt  Makefile.am  Makefile.in  mpi_bandwidth.c  mpi_bandwidth.cpp  mpi_cuda.cpp  mpi_cuda_um.cpp  mpi_latency.c  mpi_latency.cpp
examples/part_test/: CMakeLists.txt  part.cpp
examples/pmap_test/: CMakeLists.txt  Makefile.am  Makefile.in  README  pmap.cpp
examples/scalapack/: CMakeLists.txt  conversion.cpp  evp.cpp
examples/slate/: CMakeLists.txt  conversion.cpp
examples/ta_dgemm/: Makefile.am  dgemm.cpp
examples/tot_bench/: CMakeLists.txt  batched_contraction_attribution.cpp  ce_ce_segmented_strided_bench.cpp  opa_strided_arena_dgemm.cpp  opb_strided_arena_dgemm.cpp  regime_a_hce_e_strided_bench.cpp
examples/vector_tests/: CMakeLists.txt  Makefile.am  ta_vector.cpp  vector.cpp
python/: CMakeLists.txt  test_tiledarray.py
python/src/: tiledarray.cc
src/: ArrayX copy.h  CMakeLists.txt  Makefile.am  Makefile.in  VectorOps.h  allocator.h  annotated_array.h  annotated_tile.h  annotation.h  array.h  array_dim.h  array_math.h  array_storage.h  array_util.h  block.h  config_h.in  coordinate_system.h  coordinates.h  debug.h  dense_array.h  distributed_array.h  env.cc  env.cpp  env.h  error.h  iterator.h  key.h  local_array.h  madness_runtime.h  mathkernel.h  operators.h  orthotope.h  packed_tile.h  permutation.h  policy.h  predicate.h  process.h  range.h  range1.cpp  range1.h  (+23 more)
src/TiledArray/: Makefile.am  Makefile.in  annotated_array.h  annotated_tensor.h  annotated_tile.h  annotation.h  arg_tensor.h  array.h  array_base.h  array_dim.h  array_impl.cpp  array_impl.h  array_math.h  array_ref.h  array_slice.h  array_util.h  bcast_group.h  binary_tensor.h  binary_tiled_tensor.h  bitset.h  blas.h  block_range.h  blocked_pmap.h  cblas.h  config.h  config.h.in  config_h.in  contraction.h  contraction_tensor.h  contraction_tensor_impl.h  contraction_tiled_tensor.h  dist_array.h  (+103 more)
tests/: CMakeLists.txt  Makefile.am  all.cpp  allocator.cpp  annotated_array.cpp  annotated_tensor.cpp  annotation.cpp  arena.cpp  arena_einsum_unit_suite.cpp  arena_kernels.cpp  arena_sizeof_invariant_suite.cpp  arena_strided_dgemm.cpp  arena_tensor.cpp  arena_tensor_kernels.cpp  arena_tot_trivial.cpp  array.cpp  array_fixture.h  array_impl.cpp  bcast_group.cpp  binary_tensor.cpp  binary_tiled_tensor.cpp  bipartite_index_list.cpp  bipartite_variable_list.cpp  bitset.cpp  block_range.cpp  blocked_pmap.cpp  boost_test_print.h  btas.cpp  btas.h  btas_tensor_um.cpp  btas_zb_inner_tile.cpp  compute_trange1.h  config.h  config.h.in  contraction_helpers.cpp  contraction_tensor.cpp  contraction_tensor_impl.cpp  contraction_tiled_tensor.cpp  conversions.cpp  coordinates.cpp  (+132 more)
(+11665 files in other folders)
